--- a/97.APLLICATION_ARCHITECTURE/.settings/org.eclipse.core.resources.prefs
+++ b/97.APLLICATION_ARCHITECTURE/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/itwill/address/erd/guest.ddl=MS949
+encoding//src/com/itwill/member/erd/member.ddl=MS949
 encoding/<project>=x-windows-949
